# csv-project

./: .dockerignore  .env.example  .gitignore  QUICKSTART.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  docker-deploy.sh  key1.pem  openapi.yaml  render.yaml  run.ps1  run.sh
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  Dockerfile.render  app.py  models.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  handlers.py
backend/src/api/controllers/: __init__.py  health_controller.py  targets_controller.py
backend/src/api/converters/: __init__.py  dto_converter.py
backend/src/bl/: __init__.py  target_service.py
backend/src/dal/: __init__.py  target_repository.py
backend/src/dal/converters/: __init__.py  entity_converter.py
backend/src/dal/entities/: __init__.py  target_entity.py
backend/src/models/: __init__.py  target.py
backend/tests/: conftest.py  test_integration.py  test_unit.py
backend/tests/factories/: __init__.py  target_factory.py
frontend/: .env.development  .gitignore  Dockerfile  Dockerfile.render  cypress.config.mjs  nginx.conf  nginx.render.conf  package-lock.json  package.json  vite.config.ts
frontend/cypress/e2e/: targets.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/scripts/: ci.sh  setup.sh
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DeleteConfirmModal.test.tsx  DeleteConfirmModal.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingSkeleton.tsx  (+5 more)
shared/openapi/: models.yaml  openapi.yaml  paths.yaml
(+10 files in other folders)
